# MQTT-c-pub-sub

./: .gitignore  CMakeLists.txt  README.md
pubmain/: main.c
src/: mqtt.c  mqtt.h
submain/: main.c
